--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+        <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
@@ -32,31 +32,28 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Buscador de productos</a>
+            <a class="navbar-brand" href="/">
+                <div>
+                <img src="{% static 'images/spotify-logo-white-png-.png'%}"  width="45" height="45" class="d-inline-block align-top" alt="">&nbsp;&nbsp;Spotify List Creator
+                </div>
+            </a>
+            ::after
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-           <!-- <form class="navbar-form navbar-right" role="form">
+        <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+            <form class="navbar-form navbar-right" role="form">
 
-                <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control">
-                </div>
-                <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
-
-                <a class="btn btn-primary" href="users/login" role="Login">Login</a>
+                {% if user.is_authenticated %}
+                    <p><a class="text-white">Hi, {{ user.username }}</a></p>
+                    <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                    <p><a class="text-white">Welcome</a></p>
+                    <a class="btn btn-primary" href="{% url 'social:begin' 'google-oauth2' %}">
+                    Login
+                    </a>
+                {% endif %}
 
             </form>
-            -->
-            {% if user.is_authenticated %}
-                <p>Logged as {{ user.username }}</p>
-                <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
-            {% else %}
-                <a class="btn btn-primary" href="{% url 'social:begin' 'google-oauth2' %}">
-                Login
-                </a>
-            {% endif %}
+
 
         </div><!--/.navbar-collapse -->
     </div>
