--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,8 @@
+{% extends "base.html" %}
 
-<!doctype html>
-<html lang="en">
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 
-<head>
-	<meta charset="utf-8">
-
-	<title>OAuth2 Authentication</title>
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-</head>
-
-<body>
-	<div class="jumbotron">
-		<h1>OAuth2 Authentication</h1>
-		{% if user.is_authenticated %}
-		<p>Logged as {{ user.username }}</p>
-		<a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
-		{% else %}
-		<a class="btn btn-primary" href="{% url 'social:begin' 'google-oauth2' %}">
-			Login
-		</a>
-		{% endif %}
-	</div>
-</body>
-
-</html>
+<!------ Include the above in your HEAD tag ---------->
+{% block content %}
+{% endblock %}
