--- a/playlist_app/static/style/style.css
+++ b/playlist_app/static/style/style.css
@@ -39,9 +39,34 @@ body{
     color: white;
 }
 
+.detail{
+    background: white;
+    width: 400px;
+    margin-left: 50px;
+    margin-top: 50px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.detail h1{
+    font-family: GothamPro;
+    padding-left: 10px;
+
+}
+.editform{
+
+    background: white;
+    width: 400px;
+    padding: 40px;
+    position: absolute;
+    margin-left: 50px;
+    margin-top: 50px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
 @font-face {
   font-family: GothamPro;
   src: url('../fonts/GothamPro-Black.ttf');
   font-weight: 100;
   font-style: normal
 }
+
+
