--- a/playlist_app/templates/list_form.html
+++ b/playlist_app/templates/list_form.html
@@ -2,8 +2,12 @@
 
 {% block page_content %}
 
-    <h1>Form</h1>
-    <form action=""></form>
-    {{ form.as_table }}
-
+    <div class="editform">
+        <h1>Form</h1>
+    <form action="" method="post">
+    {% csrf_token %}
+        {{ form.as_p}}
+        <input type="submit" value="Guardar">
+    </form>
+    </div>
 {% endblock %}
