--- a/templates/playlist_app/song_form.html
+++ b/templates/playlist_app/song_form.html
@@ -5,7 +5,21 @@
 
 <!------ Include the above in your HEAD tag ---------->
 {% block content %}
-    <h1>
-        songs form
-    </h1>
+    <form>
+        <div class="container py-2">
+            <div class="row">
+                <div class="col">
+                    <p>
+                    <label for="exampleInputNewSong">New Song</label>
+                    </p>
+                    <label for="exampleInputName">Name</label>
+                    <input type="name" class="form-control" id="exampleInputSong" aria-describedby="NameHelp" placeholder="Enter song name">
+                    <p></p>
+                    <label for="exampleInputLenght">Lenght</label>
+                    <input type="length" class="form-control" id="exampleInputSong" aria-describedby="LenghtHelp" placeholder="Enter song lenght">
+
+                </div>
+            </div>
+        </div>
+    </form>
 {% endblock %}
