--- a/templates/playlist_app/list_form.html
+++ b/templates/playlist_app/list_form.html
@@ -5,6 +5,15 @@
 
 <!------ Include the above in your HEAD tag ---------->
 {% block content %}
+    <div class="editform">
+        <h1>Form</h1>
+    <form action="" method="post">
+    {% csrf_token %}
+        {{ form.as_p}}
+        <input type="submit" value="Guardar">
+    </form>
+    </div>
+{% comment %}
     <form>
         <div class="container py-2">
             <div class="row">
@@ -22,4 +31,5 @@
             </div>
         </div>
     </form>
+{% endcomment %}
 {% endblock %}
