--- a/templates/playlist_app/playlist_create.html
+++ b/templates/playlist_app/playlist_create.html
@@ -1,11 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Playlist create</title>
-    playlist
-</head>
-<body>
+{%  extends 'base.html' %}
 
-</body>
-</html>
+{% block page_content %}
+<div class="form-row field-name">
+    <div>
+        <label for="id_name">Name:</label>
+        <input type="text" name="name" class="vTextField" maxlength="20" id="id_name">
+    </div>
+</div>
+<div class="form-row field-length">
+    <div>
+        <label class="required" for="id_length">Length:</label>
+        <input type="number" name="length" class="vIntegerField" required="" id="id_length">
+    </div>
+</div>
+{% comment %}
+                        <div class="help">Hold down “Control”, or “Command” on a Mac, to select more than one.</div>
+                </div>
+        </div>
+</fieldset>
+<div class="submit-row">
+<input type="submit" value="Save" class="default" name="_save">
+<input type="submit" value="Save and add another" name="_addanother">
+<input type="submit" value="Save and continue editing" name="_continue">
+</div>
+    <script type="text/javascript" id="django-admin-form-add-constants" src="/static/admin/js/change_form.js" data-model-name="list">
+    </script>
+<script type="text/javascript" id="django-admin-prepopulated-fields-constants" src="/static/admin/js/prepopulate_init.js" data-prepopulated-fields="[]">
+</script>
+</div>
+{% endcomment %}
+
+
+{% endblock %}
