--- a/templates/playlist_app/list_form.html
+++ b/templates/playlist_app/list_form.html
@@ -10,7 +10,7 @@
     <form action="" method="post">
     {% csrf_token %}
         {{ form.as_p}}
-        <input type="submit" value="Guardar">
+        <button class="btn btn-primary" type="submit">GUARDAR</button>
     </form>
     </div>
 {% comment %}
