--- a/templates/playlist_app/playlist_create.html
+++ b/templates/playlist_app/playlist_create.html
@@ -4,7 +4,7 @@
 {#    {% if user.is_authenticated %}(<a href="{% url 'playlist_app:playlist_create' %}">add</a>){% endif %}#}
     <div class="createForm">
         <form action="" method="post">
-        <h1>Create new list</h1>
+        <h1>Crear nova llista</h1>
         {% csrf_token %}
             {{ form.as_p}}
             <button class="btn btn-primary" type="submit">GUARDAR</button>
