Acabada la creació de llistes. Afegit camp descripció al model de list.
Heu de maquetar:
playlists_list.html--> {{l}} canviar per maquetació bootsrap
playlist_create.html --> maquetar bootsrap

--- a/templates/playlist_app/playlists_list.html
+++ b/templates/playlist_app/playlists_list.html
@@ -8,8 +8,7 @@
 
             <div class="list-group bg-info" >
                 {% for l in list %}
-                    <a class="list-group-item list-group-item-info">
-        {#               href="{{ song.get_absolute_url }}">#}
+                    <a class="list-group-item list-group-item-info" href="{{ l.get_absolute_url }}">
                         {{ l }}
                     </a>
         {#                <span class="badge">{{ song.move_set.count }}</span>#}
