--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,12 @@
     <nav class="navbar1">
         <a class="navbar-brand" href=" ">
         <img src="{% static 'images/spotify-logo-white-png-.png'%}"  width="45" height="45" class="d-inline-block align-top" alt="">
+
     Spotify List Creator
   </a>
+        {% if user.is_authenticated  %}
+           <a style="text-align: right; margin-left: 1400px; font-family: 'Arial'" class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+        {% endif %}
 </nav>
 
   {% block page_content %}
