--- a/playlist_app/templates/list_detail.html
+++ b/playlist_app/templates/list_detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block page_content %}
+
+{% if user.is_authenticated %}<a href="{% url 'list_detail' llista.pk %}"></a>{% endif %}
 <div class="detail">
     <h1>{{ llista.name }}</h1>
     <p style="padding-left: 315px; margin-top: -45px;"><a class="btn btn-outline-info" href="/playlists/{{llista.pk}}/edit/" role="button">Editar</a></p>
