--- a/playlist_app/templates/list_form.html
+++ b/playlist_app/templates/list_form.html
@@ -7,7 +7,7 @@
     <form action="" method="post">
     {% csrf_token %}
         {{ form.as_p}}
-        <input type="submit" value="Guardar">
+        <input class="btn btn-warning" type="submit" value="Guardar">
     </form>
     </div>
 {% endblock %}
