--- a/templates/playlist_app/playlist_create.html
+++ b/templates/playlist_app/playlist_create.html
@@ -1,7 +1,7 @@
 {%  extends 'base.html' %}
 
 {% block content %}
-{#    {% if user.is_authenticated %}(<a href="{% url 'playlist_app:playlist_create' %}">add</a>){% endif %}#}
+    {% if user.is_authenticated %}<a href="{% url 'playlist_app:playlist_create' %}"></a>{% endif %}
     <div class="createForm">
         <form action="" method="post">
         <h1>Crear nova llista</h1>
