spotify API used to list all songs.

--- a/templates/playlist_app/songs_searcher.html
+++ b/templates/playlist_app/songs_searcher.html
@@ -1,38 +1,29 @@
 {% extends "base.html" %}
 {% load static %}
 
+
 <!-- Font Awesome -->
 <script src="https://use.fontawesome.com/22ab3d6381.js"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
+
 {% block content %}
 
-<div class="container">
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-  </div>
-
-  <ul class="nav navbar-nav">
-    <li class="dropdown active">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Filter <span class="caret"></span></a>
-      <ul class="dropdown-menu">
-        <li><a href="?filter=album&q={{q|default_if_none:"" }}">Album</a></li>
-        <li><a href="?filter=artist&q={{q|default_if_none:"" }}">Artista</a></li>
-        <li><a href="?filter=playlist&q={{q|default_if_none:"" }}">Lista</a></li>
-        <li><a href="?filter=track&q={{q|default_if_none:"" }}">Canción</a></li>
-      </ul>
-    </li>
-  </ul>
-
-  <ul class="nav navbar-nav navbar-right">
-    <li class="Contador">{{ count }}</li>
-  </ul>
+<div class="col-md-8">
 
   <form class="form-horizontal" method="get">
     <div class="form-group form-group-lg">
       <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+        <i class="nav navbar-nav navbar-right"></i>
+
+{% comment %}        <ul class="nav navbar-nav navbar-right">
+            <li class="Contador">{{ count }}</li>
+        </ul>{% endcomment %}
+        <p></p>
         <input type="hidden" name="filter" value="{{filter}}">
         <input class="form-control" type="text" id="formGroupInputLarge" name="q" placeholder="Buscar..." >
-        <a class="search-icon"><input type="submit" class="fa search-input" aria-hidden="true" value="&#xf002"></i></a>
+        <a class="search-icon">
+            <input type="submit" class="btn btn-outline-info" aria-hidden="true" value="BUSCAR"></a>
         {% if not q %}
           <p class="error message">Debes rellenar el texto a buscar.</p>
         {% else %}
@@ -44,14 +35,20 @@
   </form>
 </div>
 
-<div class="container">
-  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-    <ul class="results">
+<div class="col-lg-12">
+{#  <div class="col-xs-12 col-sm-8 col-sm-offset-2">#}
       {% for item in items %}
-      <li><img class="thumb" src="{{ item.image|default_if_none:"http://iosicongallery.com/img/64/spotify-music-2015.png" }}">{{ item.name }}</li>
+        <div class="row">
+            <img class="thumb" src="{{ item.image|default_if_none:"http://iosicongallery.com/img/64/spotify-music-2015.png" }}">
+            &nbsp; {{ item.name }} &nbsp; <a>afegir cançó</a>
+        </div>
       {% endfor %}
-    </ul>
-  </div>
 </div>
+{#</div>#}
 
 {% endblock %}
+
+
+
+
+
