--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,30 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+
+    {% block javascript %}
+    <script>
+        $(document).ready(function() {
+            $('#btnAddSong').click(function() {
+                var data = new FormData();
+                var song_name = $(this).val()
+                data.append('song_name', song_name);
+                $.ajax({
+                    type: 'POST',
+                    url: 'song_create_ajax',
+                    data: data,
+                    processData: false,
+                    contentType: false,
+                    success: function(json) {
+                        alert(json);
+                    }
+                })
+            });
+        });
+
+     </script>
+    {% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
