--- a/templates/playlist_app/songs_searcher.html
+++ b/templates/playlist_app/songs_searcher.html
@@ -40,7 +40,7 @@
       {% for item in items %}
         <div class="row">
             <img class="thumb" src="{{ item.image|default_if_none:"http://iosicongallery.com/img/64/spotify-music-2015.png" }}">
-            &nbsp; {{ item.name }} &nbsp; <a>afegir cançó</a>
+            <input type="submit"  id="btnAddSong" name="addSong" value="{{ item.name }}">
         </div>
       {% endfor %}
 </div>
