--- a/templates/playlist_app/list_form.html
+++ b/templates/playlist_app/list_form.html
@@ -3,11 +3,14 @@
 {% block page_content %}
 
     <div class="editform">
-        <h1>Form</h1>
+        <h1>Edita la llista</h1>
     <form action="" method="post">
     {% csrf_token %}
         {{ form.as_p}}
         <input class="btn btn-warning" type="submit" value="Guardar">
+        &nbsp;
+        <a href="{% url 'songs_searcher' %}">afegir cançons</a>
+
     </form>
     </div>
 {% endblock %}
