--- a/templates/playlist_app/songs_searcher.html
+++ b/templates/playlist_app/songs_searcher.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
 
-{% block content %}
+{% block page_content %}
 
 <div class="col-md-8">
 
@@ -21,13 +21,13 @@
         </ul>{% endcomment %}
         <p></p>
         <input type="hidden" name="filter" value="{{filter}}">
-        <input class="form-control" type="text" id="formGroupInputLarge" name="q" placeholder="Buscar..." >
+        <input class="form-control" style="margin-bottom: 10px" type="text" id="formGroupInputLarge" name="q" placeholder="Buscar..." >
         <a class="search-icon">
-            <input type="submit" class="btn btn-outline-info" aria-hidden="true" value="BUSCAR"></a>
+            <input type="submit" class="btn btn-outline-info" style="margin-bottom: 10px" aria-hidden="true" value="BUSCAR"></a>
         {% if not q %}
           <p class="error message">Debes rellenar el texto a buscar.</p>
         {% else %}
-          <p class="message">Se han encontrado {{ count }} resultados de "{{ q }}" en {{ filter }}s</p>
+          <p style="color: white" class="message" color="white">Se han encontrado {{ count }} resultados de "{{ q }}" en {{ filter }}s</p>
         {% endif %}
 
       </div>
@@ -35,12 +35,16 @@
   </form>
 </div>
 
-<div class="col-lg-12">
+<div id="sons_list" class="col-lg-12">
 {#  <div class="col-xs-12 col-sm-8 col-sm-offset-2">#}
-      {% for item in items %}
+
+
+    <input class="btn btn-outline-info" style="margin-bottom: 10px; margin-left: 15px" type="submit"  id="btnAddSong" name="song" value="Añadir canciones seleccionadas">
+    <br>
+        {% for item in items %}
         <div class="row">
-            <img class="thumb" src="{{ item.image|default_if_none:"http://iosicongallery.com/img/64/spotify-music-2015.png" }}">
-            <input type="submit"  id="btnAddSong" name="addSong" value="{{ item.name }}">
+            <img class="thumb" style="margin-right: 10px" src="{{ item.image|default_if_none:"http://iosicongallery.com/img/64/spotify-music-2015.png" }}">
+            <input class="action-checkbox" style="margin-right: 10px; width: 20px; height: 20px" type="checkbox" name="{{ item.name }}"><label style="color: white"> {{ item.name }} </label>
         </div>
       {% endfor %}
 </div>
