--- a/templates/playlist_app/list_detail.html
+++ b/templates/playlist_app/list_detail.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
-
+{% block title %}Playlist_projecte - {{ llista.name }}{% endblock %}
 {% block page_content %}
 <div class="detail">
-    <h1>{{ llista.name }}</h1>
+    <span vocab="http://schema.org/" typeof="Restaurant">
+    <h1>
+        <span property="name">{{ llista.name }}</span>
+{#        {{ llista.name }}#}
+    </h1>
     <p style="padding-left: 315px; margin-top: -45px;"><a class="btn btn-outline-info" href="/playlists/{{llista.pk}}/edit/" role="button">Editar</a></p>
     <p style="padding-left: 210px; margin-top: -54px;"><a class="btn btn-outline-info" href="/playlists/{{llista.pk}}/delete/" role="button">Esborrar</a></p>
     {% if llista.songs.exists %}
@@ -14,6 +18,7 @@
         {% endfor %}
     {% else %}
         <p>No hi ha cançons</p>
+    </span>
     {% endif %}
 
 </div>
