ja surten coses però el footer segueix sense apereixer

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js h-100" lang="">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -97,5 +97,11 @@
 <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
 
 <script src="{% static 'js/main.js' %}"></script>
+<footer>
+  <a href="#"><i class="fa fa-facebook"></i></a>
+  <a href="#"><i class="fa fa-twitter"></i></a>
+  <a href="#"><i class="fa fa-google-plus"></i></a>
+  <a href="#"><i class="fa fa-twitch"></i></a>
+</footer>
 </body>
 </html>
