--- a/static/css/main.css
+++ b/static/css/main.css
@@ -271,7 +271,13 @@ html {
  }
  
 
-
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color:#fff;
+}
 
 
 
