--- a/templates/playlist_app/detail.html
+++ b/templates/playlist_app/detail.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+{% block content %}
+    <span vocab="http://schema.org/" typeof="MusicPlaylist">
+        <h1>
+            <span property="name">{{ list.name }}</span>
+            (<a href="{% url 'playlist_app:list_update' list.pk %}">edit</a>)
+        </h1>
+        <h2>
+            Track
+            {%  if  user.is_authenticated  %}
+                (<a  href="{%  url  'playlist_app:song_create_ajax' %}">add</a>)
+            {%  endif  %}
+        </h2>
+        <ul>
+            {%  for  song  in  list.songs.all  %}
+                <li>
+                    <a  href="{%  url  'playlist_app:songs_searcher'  %}">
+                        {{  song.name  }}
+                    </a>
+                </li>
+            {%empty  %}
+                <li>Sorry,  no  songs  for  this  playlist  yet.</li>
+            {%  endfor  %}
+        </ul>
+    </span>
+{% endblock %}
 
-</body>
-</html>
